src/objects/Surround_CQ_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CQ Reportings (Account Legal Entity)</relationshipLabel>
        <relationshipName>CQ_Reportings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CQ Reportings (Account Name)</relationshipLabel>
        <relationshipName>Surround_CQ_Reportings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQ_Close_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CQ Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CQ_Customer_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQ_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Documents_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQ_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CQ Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CQ_FSO_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Sales Order Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQ_Language__c</fullName>
        <label>CQ Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQ_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CQ Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surround_CQ_Reportings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQ_Quote_Path_Status__c</fullName>
        <description>Field for the Quote Path on Contracted Quotes</description>
        <label>CQ Quote Path Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Configure</fullName>
                    <default>true</default>
                    <label>Configure</label>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQ_Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CQ_Quote_Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>CQ Reportings</relationshipLabel>
        <relationshipName>CQ_Reportings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_Requestor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CQ Requestor (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Surround_CQ_Reportings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_Requestor_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CQ Requestor (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surround_CQ_Reportings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_SP_Email_Failure_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SP Email Failure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_SP_Email_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SP Email Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQ_Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CQ Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CQ_Reportings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_Servies_components__c</fullName>
        <label>Services Components</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering - NAM CQ Only</fullName>
                </value>
                <value>
                    <fullName>Installation - NAM CQ Only</fullName>
                </value>
                <value>
                    <fullName>3G SM Assessment/Compression</fullName>
                </value>
                <value>
                    <fullName>3G MSC Consolidation</fullName>
                </value>
                <value>
                    <fullName>3G Other</fullName>
                </value>
                <value>
                    <fullName>3G Decommissioning</fullName>
                </value>
                <value>
                    <fullName>3G BHCA Analysis</fullName>
                </value>
                <value>
                    <fullName>4G Macro Install / Integrate</fullName>
                </value>
                <value>
                    <fullName>4G NI Other</fullName>
                </value>
                <value>
                    <fullName>4G Small Cells - MBO</fullName>
                </value>
                <value>
                    <fullName>4G Post launch Optimization</fullName>
                </value>
                <value>
                    <fullName>4G NCA</fullName>
                </value>
                <value>
                    <fullName>4G DAS</fullName>
                </value>
                <value>
                    <fullName>4G Reconfiguration</fullName>
                </value>
                <value>
                    <fullName>4G Small Cells - MBI</fullName>
                </value>
                <value>
                    <fullName>4G NPO Other</fullName>
                </value>
                <value>
                    <fullName>4G Small Cells - RRH</fullName>
                </value>
                <value>
                    <fullName>4G BBU in Box</fullName>
                </value>
                <value>
                    <fullName>4G RF Design</fullName>
                </value>
                <value>
                    <fullName>4G Decommissioning</fullName>
                </value>
                <value>
                    <fullName>4G Pre launch Optimization</fullName>
                </value>
                <value>
                    <fullName>4G Other</fullName>
                </value>
                <value>
                    <fullName>5G Install / Integrate (DU / RU / CU)</fullName>
                </value>
                <value>
                    <fullName>5G VCU /VNF Services</fullName>
                </value>
                <value>
                    <fullName>5G Transport</fullName>
                </value>
                <value>
                    <fullName>5G Post launch optimization</fullName>
                </value>
                <value>
                    <fullName>5G NI Site Services Other</fullName>
                </value>
                <value>
                    <fullName>5G NPO Other</fullName>
                </value>
                <value>
                    <fullName>5G Ancillary Material</fullName>
                </value>
                <value>
                    <fullName>5G Pre launch Optimization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQ_Status__c</fullName>
        <label>Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rebid</fullName>
                </value>
                <value>
                    <fullName>Closed(not won)</fullName>
                    <label>Closed (Not Won)</label>
                </value>
                <value>
                    <fullName>Closed (Won)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQ_Surround_Documents_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Documents URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Total_Sales_Order_PO_Amount__c</fullName>
        <label>Total Sales Order PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CQ_Value__c</fullName>
        <label>CQ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Organization_Segment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Organization Segment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Project Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Site_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Project Site City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Site_State_Province__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Project Site State</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Request Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Country__c</fullName>
        <label>Destination Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State Of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius And Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Email Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Surround_CQ_Reportings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Sales_Order_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Sales Order Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Pricing_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_BG__c</fullName>
        <label>Lead_BG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>_3rd Party Integration 3PI</fullName>
                </value>
                <value>
                    <fullName>Fixed Access</fullName>
                </value>
                <value>
                    <fullName>IP Platforms</fullName>
                </value>
                <value>
                    <fullName>IP ROUTING</fullName>
                </value>
                <value>
                    <fullName>IP TRANSPORT</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>LICENSING</fullName>
                </value>
                <value>
                    <fullName>Wireless Access</fullName>
                </value>
                <value>
                    <fullName>Application &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>Fixed Networks</fullName>
                </value>
                <value>
                    <fullName>IP / Optical Networks</fullName>
                </value>
                <value>
                    <fullName>Mobile Networks</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_CQ_Quantity__c</fullName>
        <label>Master Quote Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_CQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Days_Until_Due__c</fullName>
        <formula>CQ_Due_Date__c - today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Days Until Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sales_Orders__c</fullName>
        <label>No. of Sales Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CQ Reportings</relationshipLabel>
        <relationshipName>Surround_CQ_Reportings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Surround_CQ_Reportings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Documents_Folder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Documents Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Submission__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ready for Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surround_CQ_Reportings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_to_Customer_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted to Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surround_Documents_Folder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Surround Documents Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Surround_Master_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Surround Master Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Surround_Priced_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the reference to the Account record which was used for pricing in Surround.</description>
        <label>Surround Priced Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CQ Reportings (Surround Priced Account)</relationshipLabel>
        <relationshipName>CQ_Reportings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Order_PO_Amount_EUR__c</fullName>
        <label>Total Sales Order PO Amount EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Order_PO_Amount_USD__c</fullName>
        <label>Total Sales Order PO Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eQuote_Error__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>eQuote Error</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eQuote_Status__c</fullName>
        <label>eQuote Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eQuote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCQ?</label>
        <type>Checkbox</type>
    </fields>
    <label>CQ Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quote_Name__c</columns>
        <columns>CQ_Number__c</columns>
        <columns>CQ_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CQ Reportings</pluralLabel>
    <recordTypes>
        <fullName>Surround_CQ_Reporting_Read_Only_Record_Type</fullName>
        <active>true</active>
        <description>This record type is for surround CQ Reporting object</description>
        <label>CQ Reporting Read-Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>